--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <br>
     <p class="text">You have been congratulated with a pot of gold.</p>
     <p class="text">If you are looking for a place to spend it wisely on, the leprechaun is looking for an investment in his new game company. To help you with your decision, feel free to try out some of his games:</p>
-    <a href="https://editor.p5js.org/Dania-Liu/full/zqUOl-UCH">Rainbow Hypnosis Game (Just Keep Staring)</a>
+    <a href="https://editor.p5js.org/Dania-Liu/full/zqUOl-UCH">Rainbow Hypnosis (Just Keep Staring)</a>
     <br>
     <a href="https://editor.p5js.org/Dania-Liu/present/44r9QZ303">Blowing and Popping Bubbles</a>
     <br>
