--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1 id="heading">End of the Rainbow</h1>
     <div class="centre">
     <iframe src="https://editor.p5js.org/Dania-Liu/embed/ZHRy0Y8gP" id="leprechaun"></iframe>
+    <img src="./images/investment.JPG" alt="investment" id="investment">
+    <img src="./images/piggy.JPG" alt="piggy" id="piggy">
     <br>
     <p class="text">You have been congratulated with a pot of gold.</p>
     <p class="text">If you are looking for a place to spend it wisely on, the leprechaun is looking for an investment in his new game company. To help you with your decision, feel free to try out some of his games:</p>
